# PTVT

./: .gitignore  CMakeLists.txt  Readme.md
optixPathTracer/: CMakeLists.txt  ClosestHitManager.cpp  ClosestHitManager.h  helpers.h  optixPathTracer.cpp  optixPathTracer.cu  optixPathTracer.h  parallelogram.cu  ptvtConfig.h.in  vtAtlasXML.cpp  vtAtlasXML.h  vtHelpers.h  vtManager.cpp  vtManager.h  vtMipIDTexture.cpp  vtMipIDTexture.h  vtPageTable.cpp  vtPageTable.h  vtTileCache.cpp  vtTileCache.h  vtTileDetermination.cu  vtTileReader.cpp  vtTileReader.h  vtTilesXML.cpp  vtTilesXML.h  vtTriangleMesh.cu
optixPathTracer/data/: atlas.xml  sponza.mtl  tile_info.xml
pugixml/: CMakeLists.txt
sutil/: CMakeLists.txt  ILLoader.cpp  ILLoader.h  OptiXMesh.cpp  OptiXMesh.h  sutil.cpp
